glx/testdata/invalid/missing-required-fields/media/media-missing-uri.glx
media:
  media-missing-uri:
    mime_type: "image/jpeg"


